# ETIC_PW2425_Backend_I

./: README.md
aula004/: Makefile
aula004/src/: todobasic.py
aula005/: run.py  tests_cli.py
aula006/: Dockerfile  pyproject.toml
aula006/src/: run.py
aula010/.devcontainer/: devcontainer.json  docker-compose.yml
aula010/api/: main.py
aula10/: Dockerfile  docker-compose.yaml  pyproject.toml
aula11/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
aula11/api/: main.py  models.py  run.py
aula11/api/routes/: product.py
aula12/: Dockerfile  README.md  pyproject.toml
aula12 (copy)/: README.MD  pyproject.toml
aula12 (copy)/.devcontainer/: devcontainer.json
aula12 (copy)/api/: client.py  main.py  model.py
aula12 (copy)/api/routes/: alumni.py
aula12 (copy)/scripts/: fakedb.py
aula12/api/: client.py  main.py  model.py  run.py
aula12/api/routes/: alumni.py
aula12/db/: db.json
aula12/scripts/: fakedb.py
aula16/: db.sqlite3
aula16/aula15/: settings.py  urls.py  wsgi.py
aula17/: db.sqlite3  manage.py  pyproject.toml
aula17/.devcontainer/: devcontainer.json
aula17/aula15/: asgi.py
aula17/aula16/: asgi.py  settings.py
aula17/aula17/: urls.py  wsgi.py
aula17/products/: urls.py
aula4/: Makefile  todo_list.txt
aula4/src/: cli.py  cli_beta.py
aula5/: run.py  tests_cli.py
aula6/: Makefile  README.md
aula6/src/: pyproject.toml  run.py
aula7/: Makefile
aula7/eticgpt/: bot.py  client.py  models.py  run.py
aula7to9/: Dockerfile  docker-compose.yaml  pyproject.toml
aula7to9/eticgpt/: clients.py
(+9 files in other folders)
