[tool.poetry]
name = "API"
version = "0.1.0"
description = "Aula10's poetry document to test a fastAPI"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
black = "^24.3.0"
uvicorn = "^0.29.0"

[tool.poetry.scripts]
api = "api.main:api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
