[tool.poetry]
name = "api-proj12"
version = "0.1.0"
description = "A simple API Project to consolidate all information learned in classes 9 to 12"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
faker = "^24.8.0"
black = "^24.3.0"
uvicorn = "^0.29.0"
datetime = "^5.5"
pymongo = "^4.6.3"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
